figured out why my about page divs weren't wrapping. I applied flex wrap to wrong section. Face palm. But anywasy fixed it.

--- a/css/index.css
+++ b/css/index.css
@@ -194,24 +194,25 @@ nav a {
 .containerAbout-page{
     width: 800px;
     margin: 0 auto;
-}
-
-.main{
     
-    width: 800px;
-
-
 }
 
-.main div{
-display: inline-block;
- width: 45%;
+.aboutmain{
+    display: flex;
+    width: 800px;
+    flex-flow: row wrap;
+
+  }
+
+
+.aboutmain div{
+width: 45%;
+margin: auto 1rem;
 border-bottom: 2px dashed black;
-margin: 1rem;
 padding: 1rem;
 }
 
-.main div button{
+.aboutmain div button{
     padding: 5px 10px;
     border: 2px solid black;
     background-color: white;
@@ -229,8 +230,4 @@ padding: 1rem;
 
 .aboutlastSec{
     margin: 3rem auto;
-}
-
-
-
 }
